2004-04-12  Joseph S. Myers  <jsm@polyomino.org.uk>

	* phantasia/fight.c, phantasia/gamesupport.c,
	phantasia/interplayer.c, phantasia/io.c, phantasia/main.c,
	phantasia/misc.c: Update from NetBSD CVS.

2004-04-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* mille/move.c, phantasia/fight.c, phantasia/gamesupport.c,
	phantasia/include.h, phantasia/interplayer.c, phantasia/io.c,
	phantasia/main.c, phantasia/misc.c, phantasia/phantstruct.h,
	phantasia/setup.c, worms/worms.c, wtf/acronyms, wtf/acronyms.comp:
	Update from NetBSD CVS.

2004-03-29  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes2, fortune/datfiles/fortunes2-o.real,
	hack/data, hack/rumors: Update from NetBSD CVS.

2004-03-27  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-03-12  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-03-05  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms: Update from NetBSD CVS.

2004-03-04  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms.comp: Update from NetBSD CVS.

2004-02-28  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes2: Update from NetBSD CVS.

2004-02-18  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms: Update from NetBSD CVS.

2004-02-14  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes, fortune/datfiles/fortunes.sp.ok,
	rogue/USD.doc/rogue.me: Update from NetBSD CVS.
	* NEWS: Fix typo.
	* ChangeLog: Mark properly for 2.16 release.

2004-02-13  Joseph S. Myers  <jsm@polyomino.org.uk>

	* Version 2.16.

	* NEWS, bsd-games.lsm, bsd-games-non-free.lsm: Update.

	* morse/morse.c: Update from NetBSD CVS.

	* morse/morse.c: Encode and decode more characters.  Don't put
	commas after every character.  Don't encode whitespace as "...".
	Don't fail decoding across a 1024-byte boundary.  Mark end of
	message appropriately.  From OpenBSD but with punctuation taken