@@ -1121,7 +1121,7 @@ It's the other end of the kettle of fish.
 %
 It's the straw that broke the ice.
 %
-It's the the highest of the lows.
+It's the highest of the lows.
 %
 It's the vilest smell I ever heard.
 %
